WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118402
Paint the page background if we haven't received our first update
https://bugs.webkit.org/show_bug.cgi?id=118402
Summary
Paint the page background if we haven't received our first update
Anders Carlsson
Reported
2013-07-04 14:13:30 PDT
Paint the page background if we haven't received our first update
Attachments
Patch
(2.57 KB, patch)
2013-07-04 14:15 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-07-04 14:15:57 PDT
Created
attachment 206113
[details]
Patch
Anders Carlsson
Comment 2
2013-07-04 14:18:29 PDT
Committed
r152407
: <
http://trac.webkit.org/changeset/152407
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug