Paint the page background if we haven't received our first update https://bugs.webkit.org/show_bug.cgi?id=118402 <rdar://problem/13893308>

Reviewed by Simon Fraser.

Make sure that we always paint something when we haven't received our first update from the web process.

* UIProcess/API/mac/WKView.mm:
(-[WKView drawRect:]):
* UIProcess/DrawingAreaProxyImpl.h:
(WebKit::DrawingAreaProxyImpl::hasReceivedFirstUpdate):

Canonical link: https://commits.webkit.org/136400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152407 268f45cc-cd09-0410-ab3c-d52691b4dbfc